# AgentWorldGenerator

./: .gitignore  IDENTITY.md  README.md  USER.md  pyproject.toml
agentworld/: __init__.py
agentworld/agents/: __init__.py  base.py  llm_adapter.py  loader.py  profile.py
agentworld/cli/: main.py
agentworld/compiler/: __init__.py  pipeline.py
agentworld/core/: __init__.py  diagnostics.py  event_bus.py  events.py  proposals.py  runtime.py  scheduler.py  state_store.py
agentworld/orchestrator/: __init__.py  engine.py
agentworld/packs/: __init__.py
agentworld/plugins/: __init__.py  contracts.py  registry.py
agentworld/protocol/: __init__.py  action_schema.py  errors.py  plugin_schema.py  render_context.py  versions.py
agentworld/rendering/: __init__.py  context.py  render_context.schema.json  render_context_v0_2.schema.json  text2image.py
agentworld/replay/: __init__.py  artifacts.py  diagnostics.py
agentworld/rules/: __init__.py  base.py  builtin.py  (+1 more)
examples/: compile_scene_demo.py  run_minimal.py  world_dota_cm_lina.json  world_dsl_v02.json  world_minimal.json
scripts/: frontend_server.py  game_server.py
simworld/: __init__.py  agent.py  compiler.py  events.py  runtime.py  spec.py
tests/: test_action_schema.py  test_compiler.py  test_core_infra.py  test_diag.py  test_diagnostics.py  test_dota_duel_pack.py  test_dota_heroes.py  test_orchestrator.py  test_plugins.py  test_profiles.py  test_proposals.py  test_protocol.py  test_rendering.py  test_replay.py  test_rule_config.py  test_rules.py  test_runtime.py  test_validators.py
web/: index.html
(+10 files in other folders)
