[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentworldgenerator"
version = "0.2.0"
description = "Automatic Agent Simulation World Generator MVP"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
awg = "agentworld.cli.main:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
